--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0-NOT-USED",
   "scripts": {
     "start": "nx run-many --target=serve",
+    "dev:server": "nx serve server",
     "migrate": "npx prisma migrate dev --name init"
   },
   "private": false,
@@ -16,11 +17,19 @@
     "@angular/platform-browser": "~16.0.0",
     "@angular/platform-browser-dynamic": "~16.0.0",
     "@angular/router": "~16.0.0",
+    "@fastify/cookie": "^8.3.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/platform-fastify": "^10.0.0",
     "@prisma/client": "^4.16.0",
+    "argon2": "^0.30.3",
     "axios": "^1.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "fastify": "^4.18.0",
+    "nanoid": "^4.0.2",
     "ng-zorro-antd": "^16.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
