--- a/server/package.json
+++ b/server/package.json
@@ -20,15 +20,14 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.0.3",
+    "@node-rs/argon2": "^1.5.0",
     "@prisma/client": "^4.16.1",
-    "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "fastify": "^4.18.0",
     "nanoid": "^4.0.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "weplanx": "file:.."
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -41,14 +40,14 @@
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
     "jest": "^29.5.0",
+    "prisma": "^4.16.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "prisma": "^4.16.1"
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
