--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "scripts": {
-    "start": "nest start --watch",
+    "start": "nest start -b swc -w",
     "build": "nest build",
     "build:utils": "nest build utils",
     "migrate": "npx prisma migrate dev"
@@ -12,13 +12,14 @@
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-fastify": "^10.0.3",
     "@node-rs/argon2": "^1.5.0",
     "@prisma/client": "^4.16.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "fastify": "^4.18.0",
+    "passport-jwt": "^4.0.1",
     "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -27,7 +28,8 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.66",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
