--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,13 @@
 {
   "singleQuote": true,
-  "trailingComma": "all",
-  "arrowParens": "avoid"
+  "useTabs": false,
+  "printWidth": 120,
+  "tabWidth": 2,
+  "semi": true,
+  "htmlWhitespaceSensitivity": "strict",
+  "arrowParens": "avoid",
+  "bracketSpacing": true,
+  "proseWrap": "preserve",
+  "trailingComma": "none",
+  "endOfLine": "auto"
 }
