--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "console",
+  "name": "@weplanx/console",
   "version": "0.1.0",
   "scripts": {
-    "reset": "npx rimraf ./**/node_modules",
     "dev": "modern dev",
     "build": "modern build",
     "start": "modern start",
-    "serve": "modern serve",
-    "new": "modern new",
-    "lint": "modern lint",
-    "prepare": "husky install",
-    "upgrade": "modern upgrade"
+    "serve": "modern serve"
   },
   "engines": {
     "node": ">=16.18.1"
@@ -28,24 +23,26 @@
     "dist/"
   ],
   "dependencies": {
-    "@modern-js/runtime": "2.25.0",
+    "@ant-design/icons": "^5.1.4",
+    "@modern-js/runtime": "^2.25.0",
+    "antd": "^5.6.3",
     "react": "~18.2.0",
     "react-dom": "~18.2.0"
   },
   "devDependencies": {
+    "@modern-js-app/eslint-config": "2.25.0",
     "@modern-js/app-tools": "2.25.0",
+    "@modern-js/builder-rspack-provider": "2.25.0",
     "@modern-js/eslint-config": "2.25.0",
     "@modern-js/tsconfig": "2.25.0",
-    "@modern-js-app/eslint-config": "2.25.0",
-    "lint-staged": "~13.1.0",
-    "prettier": "~2.8.1",
-    "husky": "~8.0.1",
-    "rimraf": "~3.0.2",
-    "typescript": "~5.0.4",
     "@types/jest": "~29.2.4",
     "@types/node": "~16.11.7",
     "@types/react": "~18.0.26",
     "@types/react-dom": "~18.0.10",
-    "@modern-js/builder-rspack-provider": "2.25.0"
+    "husky": "~8.0.1",
+    "lint-staged": "~13.1.0",
+    "prettier": "latest",
+    "rimraf": "latest",
+    "typescript": "~5.0.4"
   }
 }
