--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
+      "@/common/*": ["./common/*"],
       "@shared/*": ["./shared/*"]
     }
   },
