--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@/common/*": ["./common/*"],
+      "@/services/*": ["./services/*"],
       "@shared/*": ["./shared/*"]
     }
   },
