--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@modern-js/runtime": "^2.25.0",
     "antd": "^5.6.3",
     "react": "~18.2.0",
-    "react-dom": "~18.2.0"
+    "react-dom": "~18.2.0",
+    "reactflow": "^11.7.4"
   },
   "devDependencies": {
     "@modern-js-app/eslint-config": "2.25.0",
