--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
-    "@modern-js/runtime": "^2.25.0",
+    "@modern-js/runtime": "2.25.2",
     "antd": "^5.6.3",
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
@@ -32,18 +32,19 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
-    "@modern-js-app/eslint-config": "^2.25.0",
-    "@modern-js/app-tools": "^2.25.0",
-    "@modern-js/builder-rspack-provider": "^2.25.0",
-    "@modern-js/eslint-config": "^2.25.0",
-    "@modern-js/tsconfig": "^2.25.0",
+    "@modern-js-app/eslint-config": "2.25.2",
+    "@modern-js/app-tools": "2.25.2",
+    "@modern-js/builder-rspack-provider": "2.25.2",
+    "@modern-js/eslint-config": "2.25.2",
+    "@modern-js/tsconfig": "2.25.2",
     "@types/jest": "~29.2.4",
     "@types/node": "~16.11.7",
     "@types/react": "~18.0.26",
     "@types/react-dom": "~18.0.10",
+    "eslint-plugin-prettier": "^5.0.0",
     "husky": "~8.0.1",
     "lint-staged": "~13.1.0",
-    "prettier": "latest",
+    "prettier": "~3.0.0",
     "rimraf": "latest",
     "typescript": "~5.0.4"
   }
